css/style.css
@font-face {
  font-family: 'icomoon';
  src: url("../fonts/icomoon/icomoon.eot?srf3rx");
  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
  font-weight: normal;
  font-style: normal;
}

/* =======================================================
*
* 	Template Style 
*
* ======================================================= */
body {
  font-family: "Space Mono", Arial, serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.7;
  color: #4d4d4d;
}

#page {
  position: relative;
  width: 100%;
  height: 100%;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}

.offcanvas #page {
  overflow: hidden;
  position: absolute;
}

.offcanvas #page:after {
  -webkit-transition: 2s;
  -o-transition: 2s;
  transition: 2s;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 101;
  background: rgba(0, 0, 0, 0.7);
  content: "";
}

a {
  color: #FF9000;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}

a:hover,
a:active,
a:focus {
  color: #FF9000;
  outline: none;
  text-decoration: none;
}

p {
  margin-bottom: 30px;
}

figure {
  text-align: center;
  /* centra immagine e didascalia */
  margin: 0 auto 20px auto;
  /* margine sotto per separare le figure */
}

figcaption {
  font-size: 0.85em;
  /* carattere più piccolo */
  color: #ccc;
  /* colore leggermente più chiaro */
  margin-top: 5px;
  /* piccolo spazio sopra la didascalia */
}


h1,
h2,
h3,
h4,
h5,
h6,
figure {
  color: #000;
  font-family: "Space Mono", Arial, serif;
  font-weight: 400;
  margin: 0 0 20px 0;
}

::-webkit-selection {
  color: #fff;
  background: #FF9000;
}

::-moz-selection {
  color: #fff;
  background: #FF9000;
}

::selection {
  color: #fff;
  background: #FF9000;
}

#fh5co-header,
.fh5co-cover {
  background-color: transparent;
  background-size: cover;
  background-attachment: fixed;
  position: relative;
  height: 600px;
  width: 100%;
}

#fh5co-header .overlay,
.fh5co-cover .overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(255, 144, 0, 0.9);
}

#fh5co-header .display-t,
.fh5co-cover .display-t {
  width: 100%;
  display: table;
}

#fh5co-header .display-tc,
.fh5co-cover .display-tc {
  display: table-cell;
  vertical-align: middle;
  height: 600px;
}

#fh5co-header .display-tc h1,
#fh5co-header .display-tc h2,
#fh5co-header .display-tc h3,
.fh5co-cover .display-tc h1,
.fh5co-cover .display-tc h2,
.fh5co-cover .display-tc h3 {
  margin: 0;
  padding: 0;
  color: white;
}

#fh5co-header .display-tc h1,
.fh5co-cover .display-tc h1 {
  font-family: "Kaushan Script", cursive;
  margin-bottom: 30px;
  font-size: 50px;
  line-height: 1.3;
  font-weight: 300;
  -webkit-transform: rotate(-5deg);
  -moz-transform: rotate(-5deg);
  -ms-transform: rotate(-5deg);
  -o-transform: rotate(-5deg);
  transform: rotate(-5deg);
}

#fh5co-header .display-tc h1 span,
.fh5co-cover .display-tc h1 span {
  padding: 4px 15px;
  position: relative;
}

#fh5co-header .display-tc h1 span:before,
.fh5co-cover .display-tc h1 span:before {
  position: absolute;
  top: 40px;
  left: 0;
  width: 30px;
  height: 4px;
  content: '';
  background: #fff;
  margin-left: -30px;
}

#fh5co-header .display-tc h1 span:after,
.fh5co-cover .display-tc h1 span:after {
  position: absolute;
  top: 40px;
  right: 0;
  width: 30px;
  height: 4px;
  content: '';
  background: #fff;
  margin-right: -30px;
}

@media screen and (max-width: 768px) {

  #fh5co-header .display-tc h1,
  .fh5co-cover .display-tc h1 {
    font-size: 34px;
  }

  #fh5co-header .display-tc h1 span:before,
  .fh5co-cover .display-tc h1 span:before {
    top: 28px;
    width: 20px;
    height: 3px;
    margin-left: -15px;
  }

  #fh5co-header .display-tc h1 span:after,
  .fh5co-cover .display-tc h1 span:after {
    top: 28px;
    width: 20px;
    height: 3px;
    margin-right: -15px;
  }
}

#fh5co-header .display-tc h2,
.fh5co-cover .display-tc h2 {
  font-size: 20px;
  line-height: 1.5;
  margin-bottom: 30px;
}

#fh5co-header .display-tc h3,
.fh5co-cover .display-tc h3 {
  font-size: 16px;
}

@media screen and (max-width: 768px) {

  #fh5co-header .display-tc h3,
  .fh5co-cover .display-tc h3 {
    font-size: 14px;
  }
}

#fh5co-header .display-tc .profile-thumb,
.fh5co-cover .display-tc .profile-thumb {
  background-size: cover !important;
  background-position: center center;
  background-repeat: no-repeat;
  position: relative;
  height: 200px;
  width: 200px;
  margin: 0 auto;
  margin-bottom: 30px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  border-radius: 50%;
}

#fh5co-header .display-tc .fh5co-social-icons li a,
.fh5co-cover .display-tc .fh5co-social-icons li a {
  color: #fff;
}

#fh5co-header .display-tc .fh5co-social-icons li a i,
.fh5co-cover .display-tc .fh5co-social-icons li a i {
  font-size: 30px;
}

#fh5co-features {
  background: #FF9000;
}

#fh5co-features h2 {
  color: #fff;
}

#fh5co-features .services-padding {
  padding: 7em 0;
}

#fh5co-features .feature-left {
  margin-bottom: 40px;
  float: left;
}

@media screen and (max-width: 992px) {
  #fh5co-features .feature-left {
    margin-bottom: 30px;
  }
}

#fh5co-features .feature-left .icon {
  display: table;
  text-align: center;
  width: 100px;
  height: 100px;
  margin: 0 auto;
  background: #fff;
  margin-bottom: 20px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  border-radius: 50%;
}

#fh5co-features .feature-left .icon i {
  font-size: 50px;
  display: table-cell;
  vertical-align: middle;
  height: 100px;
  color: #FF9000 !important;
}

#fh5co-features .feature-left .feature-copy {
  width: 100%;
}
/* ... */

